test/bad/classes/inheritance06.px

class A def
    Int x: 0

class B(A) def
    Int y: 0
    Float? z

B(1, 2)
